buildscript {
    repositories {
        maven { url = 'https://files.minecraftforge.net/maven' }
        mavenCentral()
        maven {url='https://repo.spongepowered.org/repository/maven-public'}
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
        classpath group: 'org.spongepowered', name: 'mixingradle', version: '0.7-SNAPSHOT', changing: true
    }
}

plugins {
    id 'com.matthewprenger.cursegradle' version '1.2.0'
    id 'de.undercouch.download' version '3.3.0'
//    id 'com.wynprice.cursemaven' version '2.1.1'
    id 'idea'
}

apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'eclipse'

apply from: 'https://raw.githubusercontent.com/SizableShrimp/Forge-Class-Remapper/main/classremapper.gradle'

group = 'de.teamlapen.werewolves' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
archivesBaseName = 'Werewolves'

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

ext.mod_version="Test"
ext.type="test"

sourceSets {
    main {
        resources {
            srcDirs += 'src/generated/resources'
            exclude '.cache'
        }
    }
}

apply from: 'gradle/versioning.gradle'
apply from: 'gradle/forge.gradle'
apply from: 'gradle/artifacts.gradle'
apply from: 'gradle/maven.gradle'
apply from: 'gradle/curse.gradle'


idea {
    module {
        for (String excludeDirName in ["run", "out", "logs", "gradle"]) {
            File excludeDir = new File(projectDir, excludeDirName)
            excludeDirs.add(excludeDir)
        }
        downloadJavadoc = true
        downloadSources = true
    }
}